k8s/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: betpossum
  labels:
    app.kubernetes.io/part-of: betpossum
